working on responsiveness

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div id="banner-phrase1">Brenton Jenkins</div>
         </div>
         <div class="subtitle">
-            <div id="banner-phrase2">Project Manager, Web Developer</div>
+            <div id="banner-phrase2">Product Manager, Web Developer</div>
         </div>
     </div>
 
@@ -116,15 +116,13 @@
             </div>
             <div class="writing-section">
                 <div class="card-paragraph">
-                    I’m a Full Stack Web Developer living in Redondo Beach, located in the Greater Los Angeles Area. I have a particular interest
-                    in Front End Development and Design, although I have studied Back End Development as well. I transitioned
-                    into this new career upon completing my Full Stack Web Development certificate from UCLA in May, 2018.
-                    I obtained my Bachelor of Science degree in Food Science from Cal Poly, San Luis Obispo.
+                        I’m a Full Stack Web Developer living in Redondo Beach, located in the Greater Los Angeles Area. I earned my Bachelor of Science degree in Food Science from Cal Poly, San Luis Obispo. I transitioned into tech upon completing my Full Stack Web Development certificate from UCLA in May, 2018. I have particular interests in Product Management and Front End Development.
                 </div>
                 <div class="card-paragraph">
-                    My background in creative product development as a Research and Development Manager for a variety of products in the food
-                    industry has cultivated my comprehensive approach to problem solving. It has provided me with an aptitude
-                    for understanding the needs and requirements of clients.
+                        I studied Food Science so I could combine science and creativity in product development. As the Research and Development Manager for a large snack foods company, I took products from ideation to completion. Constant communication was required with other departments as well as the client. This involved ingredient procurement, kitchen testing, consumer testing, scaling up to production, and finishing with product launches.
+                </div>
+                <div class="card-paragraph">
+                        My background has cultivated my comprehensive approach to problem solving and provided me with an aptitude for understanding the needs and requirements of clients. I am currently pursuing certifications which will enhance my value as a product manager.
                 </div>
             </div>
         </div>
