--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:url" content="https://brenton-jenkins.com/">
 
     <!--Import Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Antic|Cagliostro|Raleway|Krona+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Antic|Cagliostro|Raleway|Krona+One|Roboto" rel="stylesheet">
 
     <!--Import Google Icons-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
