Portfolio Version 2 lots of edits

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:url" content="https://brenton-jenkins.com/">
 
     <!--Import Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Antic|Cagliostro|Raleway|Krona+One|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Antic|Raleway|Krona+One| " rel="stylesheet">
 
     <!--Import Google Icons-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -57,10 +57,10 @@
                         <a class="link-item about-link waves-effect" href="#about-connect">About</a>
                     </li>
                     <li>
-                        <a class="link-item work-link waves-effect" href="#skills-connect">Skills</a>
+                        <a class="link-item work-link waves-effect" href="#work-connect">Work</a>
                     </li>
                     <li>
-                        <a class="link-item work-link waves-effect" href="#work-connect">Work</a>
+                        <a class="link-item work-link waves-effect" href="#skills-connect">Skills</a>
                     </li>
                     <li>
                         <a class="link-item contact-link waves-effect" href="#contact-connect">Contact</a>
@@ -103,7 +103,7 @@
             <div id="banner-phrase1">Brenton Jenkins</div>
         </div>
         <div class="subtitle">
-            <div id="banner-phrase2">Product Manager, Web Developer</div>
+            <div id="banner-phrase2">Web Developer</div>
         </div>
     </div>
 
@@ -111,18 +111,30 @@
     <div class="row" id="about-connect">
         <div class="paper-box about-box">
             <h5 class="card-title">About Me</h5>
-            <img src=./public/images/brenton.jpg class="self-photo" alt="Brenton Himself">
             <div class="separation">
             </div>
-            <div class="writing-section">
-                <div class="card-paragraph">
-                        I’m a Full Stack Web Developer living in Redondo Beach, located in the Greater Los Angeles Area. I earned my Bachelor of Science degree in Food Science from Cal Poly, San Luis Obispo. I transitioned into tech upon completing my Full Stack Web Development certificate from UCLA in May, 2018. I have particular interests in Product Management and Front End Development.
+            <div class="about-writing-section writing-section">
+                <div class="about-left">
+                    <div class="card-paragraph">
+                        I’m a Full Stack Web Developer living in Redondo Beach, located in the Greater Los Angeles Area. I earned my Bachelor of
+                        Science degree in Food Science from Cal Poly, San Luis Obispo. I transitioned into tech upon completing
+                        my Full Stack Web Development certificate from UCLA in May, 2018. I have particular interests in
+                        Front End Development, Web Design, and Product Management.
+                    </div>
+                    <div class="card-paragraph">
+                        I studied Food Science so I could combine science and creativity in product development. As the Research and Development
+                        Manager for a large snack foods company, I took products from ideation to completion. Constant communication
+                        was required with other departments as well as the client. This involved ingredient procurement,
+                        kitchen testing, consumer testing, scaling up to production, and finishing with product launches.
+                    </div>
+                    <div class="card-paragraph">
+                        My background has cultivated my comprehensive approach to problem solving and provided me with an aptitude for understanding
+                        the needs and requirements of clients. I am currently pursuing additional certifications to enhance
+                        my value in the tech world.
+                    </div>
                 </div>
-                <div class="card-paragraph">
-                        I studied Food Science so I could combine science and creativity in product development. As the Research and Development Manager for a large snack foods company, I took products from ideation to completion. Constant communication was required with other departments as well as the client. This involved ingredient procurement, kitchen testing, consumer testing, scaling up to production, and finishing with product launches.
-                </div>
-                <div class="card-paragraph">
-                        My background has cultivated my comprehensive approach to problem solving and provided me with an aptitude for understanding the needs and requirements of clients. I am currently pursuing certifications which will enhance my value as a product manager.
+                <div class="about-right">
+                    <img src=./public/images/brenton.jpg class="self-photo" alt="Brenton Himself">
                 </div>
             </div>
         </div>
@@ -130,103 +142,6 @@
 
     <!-- Photo Section 1 -->
     <div class="photo-section-1">
-    </div>
-
-    <!-- Skills Section -->
-    <div class="row" id="skills-connect">
-        <div class="paper-box skills-box">
-            <h5 class="center-align card-title">Skills</h5>
-            <div class="separation">
-            </div>
-            <div class="writing-section">
-                <div class="card-paragraph skills-paragraph">
-                    The UCLA Full Stack Web Development certificate program covered the following topics in varying detail. I am more proficient
-                    with some of these skills than others, but am continuing to learn and expand my knowledge of these technologies.
-                </div>
-            </div>
-            <div class="skills-inner-box">
-                <div class="icon-div">
-                    <img src=./public/images/html5.png class="skills-image" id="html5" alt="HTML5">
-                    <h6 class="skills-label">HTML5</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/css3.png class="skills-image" id="css3" alt="CSS3">
-                    <h6 class="skills-label">CSS3</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/javascript.png class="skills-image" id="javascript" alt="JavaScript">
-                    <h6 class="skills-label">JavaScript</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/jquery.png class="skills-image" id="jquery" alt="jQuery">
-                    <h6 class="skills-label">jQuery</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/bootstrap.png class="skills-image" id="bootstrap" alt="Bootstrap">
-                    <h6 class="skills-label">Bootstrap</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/materialize.png class="skills-image" id="materialize" alt="MaterializeCSS">
-                    <h6 class="skills-label">MaterializeCSS</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/mongodb.png class="skills-image" id="mongodb" alt="MongoDB">
-                    <h6 class="skills-label">MongoDB</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/express.png class="skills-image" id="express" alt="Express">
-                    <h6 class="skills-label">Express</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/react.png class="skills-image" id="react" alt="React">
-                    <h6 class="skills-label">React</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/nodejs.png class="skills-image" id="nodejs" alt="Node.js">
-                    <h6 class="skills-label">Node.js</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/mern.png class="skills-image" id="mern" alt="MERN Stack">
-                    <h6 class="skills-label">MERN Stack</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/json.png class="skills-image" id="json" alt="JSON">
-                    <h6 class="skills-label">JSON</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/restfulapi.png class="skills-image" id="restfulapi" alt="RESTful APIs">
-                    <h6 class="skills-label">RESTful APIs</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/mysql.png class="skills-image" id="mysql" alt="MySQL">
-                    <h6 class="skills-label">MySQL</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/yarn.png class="skills-image" id="yarn" alt="Yarn">
-                    <h6 class="skills-label">Yarn</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/heroku.png class="skills-image" id="heroku" alt="Heroku">
-                    <h6 class="skills-label">Heroku</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/git.png class="skills-image" id="git" alt="Git">
-                    <h6 class="skills-label">Git</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/github.png class="skills-image" id="github" alt="GitHub">
-                    <h6 class="skills-label">GitHub</h6>
-                </div>
-                <div class="icon-div">
-                    <img src=./public/images/responsive.jpg class="skills-image" id="responsive-design" alt="Responsive Design">
-                    <h6 class="skills-label">Responsive Design</h6>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Photo Section 2 -->
-    <div class="photo-section-2">
     </div>
 
     <!-- Work Section -->
@@ -332,6 +247,103 @@
         </div>
     </div>
 
+    <!-- Photo Section 2 -->
+    <div class="photo-section-2">
+    </div>
+
+    <!-- Skills Section -->
+    <div class="row" id="skills-connect">
+        <div class="paper-box skills-box">
+            <h5 class="center-align card-title">Skills</h5>
+            <div class="separation">
+            </div>
+            <div class="writing-section">
+                <div class="card-paragraph skills-paragraph">
+                    The UCLA Full Stack Web Development certificate program covered the following topics in varying detail. I am more proficient
+                    with some of these skills than others, but am continuing to learn and expand my knowledge of these technologies.
+                </div>
+            </div>
+            <div class="skills-inner-box">
+                <div class="icon-div">
+                    <img src=./public/images/html5.png class="skills-image" id="html5" alt="HTML5">
+                    <h6 class="skills-label">HTML5</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/css3.png class="skills-image" id="css3" alt="CSS3">
+                    <h6 class="skills-label">CSS3</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/javascript.png class="skills-image" id="javascript" alt="JavaScript">
+                    <h6 class="skills-label">JavaScript</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/jquery.png class="skills-image" id="jquery" alt="jQuery">
+                    <h6 class="skills-label">jQuery</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/bootstrap.png class="skills-image" id="bootstrap" alt="Bootstrap">
+                    <h6 class="skills-label">Bootstrap</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/materialize.png class="skills-image" id="materialize" alt="MaterializeCSS">
+                    <h6 class="skills-label">MaterializeCSS</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/mongodb.png class="skills-image" id="mongodb" alt="MongoDB">
+                    <h6 class="skills-label">MongoDB</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/express.png class="skills-image" id="express" alt="Express">
+                    <h6 class="skills-label">Express</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/react.png class="skills-image" id="react" alt="React">
+                    <h6 class="skills-label">React</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/nodejs.png class="skills-image" id="nodejs" alt="Node.js">
+                    <h6 class="skills-label">Node.js</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/mern.png class="skills-image" id="mern" alt="MERN Stack">
+                    <h6 class="skills-label">MERN Stack</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/json.png class="skills-image" id="json" alt="JSON">
+                    <h6 class="skills-label">JSON</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/restfulapi.png class="skills-image" id="restfulapi" alt="RESTful APIs">
+                    <h6 class="skills-label">RESTful APIs</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/mysql.png class="skills-image" id="mysql" alt="MySQL">
+                    <h6 class="skills-label">MySQL</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/yarn.png class="skills-image" id="yarn" alt="Yarn">
+                    <h6 class="skills-label">Yarn</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/heroku.png class="skills-image" id="heroku" alt="Heroku">
+                    <h6 class="skills-label">Heroku</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/git.png class="skills-image" id="git" alt="Git">
+                    <h6 class="skills-label">Git</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/github.png class="skills-image" id="github" alt="GitHub">
+                    <h6 class="skills-label">GitHub</h6>
+                </div>
+                <div class="icon-div">
+                    <img src=./public/images/responsive.png class="skills-image" id="responsive-design" alt="Responsive Design">
+                    <h6 class="skills-label">Responsive Design</h6>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Photo Section 3 -->
     <div class="photo-section-3">
     </div>
@@ -373,7 +385,8 @@
                 <img src=./public/images/jellyfish-logo.png class="jelly-logo" alt="Jellyfish Logo">
                 <span class="footnote">
                     Photos I took (top to bottom):
-                    <br> Laguna Beach, &nbsp; Solvang, &nbsp; Guy W Talbot State Park, &nbsp; Redondo Beach
+                    <br>
+                    Laguna Beach, &nbsp; Guy W Talbot State Park, &nbsp; Solvang, &nbsp; Redondo Beach
                 </span>
             </div>
             <div class="footer">
