--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
     <!-- Banner Section -->
     <div class="banner">
         <div class="title">
-            <div id="banner-phrase1">Brenton Jenkins</div>
+            <!-- <div id="banner-phrase1">Brenton Jenkins</div> -->
         </div>
         <div class="subtitle">
-            <div id="banner-phrase2">Web Developer</div>
+            <!-- <div id="banner-phrase2">Web Developer</div> -->
         </div>
     </div>
 
