added link to previous portfolio website

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                     </div>
                     <div class="card-paragraph">
                         My background has cultivated my comprehensive approach to problem solving and provided me with an aptitude for understanding
-                        the needs and requirements of clients. I am currently pursuing additional certifications to enhance
-                        my value in the tech world.
+                        the needs and requirements of clients. I am currently pursuing additional education to enhance my
+                        value in the tech world.
                     </div>
                 </div>
                 <div class="about-right">
@@ -379,12 +379,16 @@
                 <img src=./public/images/jellyfish-logo.png class="jelly-logo" alt="Jellyfish Logo">
                 <span class="footnote">
                     Photos I took (top to bottom):
-                    <br>
-                    Laguna Beach, &nbsp; Guy W Talbot State Park, &nbsp; Solvang, &nbsp; Redondo Beach
+                    <br> Laguna Beach, &nbsp; Guy W Talbot State Park, &nbsp; Solvang, &nbsp; Redondo Beach
                 </span>
             </div>
             <div class="footer">
-                © 2018 Copyright Brenton Jenkins
+                <p class="copyright">
+                    © 2018 Copyright Brenton Jenkins
+                </p>
+                <a href="https://brenton-jenkins-portfolio.herokuapp.com/" target="_blank">
+                    Previous Portfolio Website
+                </a>
             </div>
         </div>
 
