--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
                     </a>
                 </li>
             </ul>
+
             <div class="jelly-div tooltip">
                 <img src=./public/images/jellyfish-logo.png class="jelly-logo" alt="Jellyfish Logo">
                 <span class="footnote">
@@ -382,6 +383,7 @@
                     <br> Laguna Beach, &nbsp; Guy W Talbot State Park, &nbsp; Solvang, &nbsp; Redondo Beach
                 </span>
             </div>
+
             <div class="footer">
                 <p class="copyright">
                     © 2018 Copyright Brenton Jenkins
@@ -391,17 +393,17 @@
                 </a>
             </div>
         </div>
+    </div>
 
 
+    <!--JQuery-->
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 
-        <!--JQuery-->
-        <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <!--Materialize JavaScript-->
+    <script type="text/javascript" src="./public/js/materialize.min.js"></script>
 
-        <!--Materialize JavaScript-->
-        <script type="text/javascript" src="./public/js/materialize.min.js"></script>
-
-        <!--Import my own Javascript-->
-        <script type="text/javascript" src="./public/js/javascript.js"></script>
+    <!--Import my own Javascript-->
+    <script type="text/javascript" src="./public/js/javascript.js"></script>
 
 </body>
 
