added link to previous portfolio website

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 <img src=./public/images/jellyfish-logo.png class="jelly-logo" alt="Jellyfish Logo">
                 <span class="footnote">
                     Photos I took (top to bottom):
-                    <br> Laguna Beach, &nbsp; Guy W Talbot State Park, &nbsp; Solvang, &nbsp; Redondo Beach
+                    <br>Laguna Beach, &nbsp; Guy W Talbot State Park, &nbsp; Solvang, &nbsp; Redondo Beach
                 </span>
             </div>
 
@@ -388,7 +388,7 @@
                 <p class="copyright">
                     © 2018 Copyright Brenton Jenkins
                 </p>
-                <a href="https://brenton-jenkins-portfolio.herokuapp.com/" target="_blank">
+                <a class="github-repo old-portfolio" href="https://brenton-jenkins-portfolio.herokuapp.com/" target="_blank">
                     Previous Portfolio Website
                 </a>
             </div>
