revised project section paragraphs and added New2Dev to projects

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 <b>Why:</b> Sometimes it appears there’s an infinite amount of material to learn when
                                 beginning to pursue one's interest in web development or web design. It can feel
                                 overwhelming in the early stages, trying to figure out what one really needs to know.
-                                Since beginning my own journey, I’ve collected insightful
+                                Since beginning my own journey into development and design, I’ve collected insightful
                                 resources to help ease into the world of the web. I want to share these resources
                                 because I wish I had them all from the beginning.
                                 This website is for beginner web developers and designers, and anyone else who benefits
