made edits to about me section paragraphs

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
                     <div class="card-paragraph">
                         I’m a Full Stack Web Developer living in Redondo Beach, located in the Greater Los Angeles
                         Area. I earned my Bachelor of
-                        Science degree in Food Science from Cal Poly, San Luis Obispo. I transitioned into tech upon
-                        completing
-                        my Full Stack Web Development certificate from UCLA in May, 2018. I have particular interests
+                        Science degree in Food Science from Cal Poly, San Luis Obispo. I transitioned into tech and
+                        earned
+                        my Full Stack Web Development certificate from UCLA Extension. I have particular interests
                         in
-                        Front End Development, UX & UI Design, and Product Management.
+                        Front End Development, as well as UX & UI Design.
                     </div>
                     <div class="card-paragraph">
                         I studied Food Science so I could combine science and creativity in product development. As the
