updated resume, added new2dev.com website in project title

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         </a>
                     </li>
                     <li class="right resume-mini">
-                        <a href="https://drive.google.com/open?id=1khZ4qvWacgTdP0kI6ThD1oisJk7iZvRg" target="_blank">
+                        <a href="https://drive.google.com/open?id=1UatM3KT_zOQ1C5UAUjUfYFCJbKmYM7Ye" target="_blank">
                             <img src=./public/images/resume.png class="social-link-mini social-link-mini-resume" alt="Brenton's Resume">
                         </a>
                     </li>
@@ -157,7 +157,7 @@
             <div class="row">
                 <div class="col l6 offset-l3 m12 s12 project">
                     <div class="app-title">
-                        New 2 Development
+                        New 2 Development (new2dev.com)
                     </div>
                     <a href="https://new2dev.com/" target="_blank">
                         <img src=./public/images/new2dev-image.png class="work-image" alt="New 2 Development Website">
@@ -470,7 +470,7 @@
                     </a>
                 </li>
                 <li class="icon-resume connect-link">
-                    <a class="github-repo" href="https://drive.google.com/open?id=1khZ4qvWacgTdP0kI6ThD1oisJk7iZvRg"
+                    <a class="github-repo" href="https://drive.google.com/open?id=1UatM3KT_zOQ1C5UAUjUfYFCJbKmYM7Ye"
                         target="_blank">
                         Resume
                     </a>
