added Haley's Portfolio and narrowed text width on page to 60%

--- a/index.html
+++ b/index.html
@@ -157,6 +157,37 @@
             <div class="row">
                 <div class="col l6 offset-l3 m12 s12 project">
                     <div class="app-title">
+                        Haley Johnson Portfolio, Illustrator and Animator
+                    </div>
+                    <a href="https://antlersandacorns.com/" target="_blank">
+                        <img src=./public/images/haley-portfolio-image.png class="work-image" alt="Haley Johnson Portfolio">
+                    </a>
+                </div>
+                <div class="col l12 m12 s12 project">
+                    <div class="writing-section">
+                        <ul class="work-paragraph">
+                            <li class="bullet">
+                                <b>What:</b> Portfolio for illustrator and animator Haley Johnson
+                            </li>
+                            <li class="bullet">
+                                <b>Why:</b> To showcase client's artwork
+                            </li>
+                            <li class="bullet">
+                                <b>Who:</b> Website was built by me
+                            </li>
+                            <li class="bullet">
+                                <b>Time:</b> Over the course of several weeks
+                            </li>
+                            <li class="bullet">
+                                <b>Technologies:</b> Node.js, several npm modules
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col l6 offset-l3 m12 s12 project">
+                    <div class="app-title">
                         New 2 Development (new2dev.com)
                     </div>
                     <a href="https://new2dev.com/" target="_blank">
@@ -167,7 +198,7 @@
                     <div class="writing-section">
                         <ul class="work-paragraph">
                             <li class="bullet">
-                                <b>What:</b> New 2 Development is a resource hub for new web developers and designers.
+                                <b>What:</b> Resource hub for new web developers and designers
                             </li>
                             <li class="bullet">
                                 <b>Why:</b> Sometimes it appears there’s an infinite amount of material to learn when
