--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <!--Optimize viewport for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124829003-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+ 
+         gtag('config', 'UA-124829003-2');
+     </script>
+
     <!-- SEO Keywords -->
     <meta name="keywords" content="brenton jenkins, brenton, jenkins, product, product manager, product management, manager, management, web, website, websites, web design, design, responsive, mobile, mobile design, development, responsive development, web developer, web development, unique, fun, developer, affordable, small business, personal, portfolio">
 
