changes to prepare for new ux design website

--- a/index.html
+++ b/index.html
@@ -77,11 +77,6 @@
                     </li>
                 </ul>
                 <ul id="nav-mobile" class="hide-on-sm-and-down">
-                    <li class="right aboutme-mini">
-                        <a href="https://about.me/brentonjenkins" target="_blank">
-                            <img src=./public/images/aboutme.png class="social-link-mini social-link-mini-aboutme" alt="Brenton's About.Me Page">
-                        </a>
-                    </li>
                     <li class="right github-mini">
                         <a href="https://github.com/Mondo114" target="_blank">
                             <img src=./public/images/github.png class="social-link-mini social-link-mini-github" alt="Brenton's GitHub Page">
@@ -94,7 +89,7 @@
                         </a>
                     </li>
                     <li class="right resume-mini">
-                        <a href="https://drive.google.com/open?id=1UatM3KT_zOQ1C5UAUjUfYFCJbKmYM7Ye" target="_blank">
+                        <a href="https://drive.google.com/open?id=1J0xQ5PuhRnXGOKUR6FcAv0S36pFXO-2z" target="_blank">
                             <img src=./public/images/resume.png class="social-link-mini social-link-mini-resume" alt="Brenton's Resume">
                         </a>
                     </li>
@@ -121,34 +116,22 @@
             <div class="about-writing-section writing-section">
                 <div class="about-left">
                     <div class="card-paragraph">
-                        I’m a Full Stack Web Developer living in Redondo Beach, located in the Greater Los Angeles
-                        Area. I earned my Bachelor of
-                        Science degree in Food Science from Cal Poly, San Luis Obispo. I transitioned into tech and
-                        earned
-                        my Full Stack Web Development certificate from UCLA Extension. I have particular interests
-                        in
-                        Front End Development, as well as UX & UI Design.
+                        I’m a freelance UX Designer pursuing a full-time position. I currently live in Redondo Beach,
+                        located in the greater Los Angeles area. I earned my Bachelor of Science degree in Food Science
+                        from Cal Poly, San Luis Obispo. Transitioning into tech, I first earned my Full Stack Web
+                        Development certificate from UCLA Extension. With this foundation in coding, I have continued
+                        my education, gaining skills in UI/UX. I recently earned a UX Design Specialization Certificate
+                        from Cal Arts, in addition to several other certifications.
                     </div>
                     <div class="card-paragraph">
                         I studied Food Science so I could combine science and creativity in product development. As the
-                        Research and Development
-                        Manager for a large snack foods company, I took products from ideation to completion. Constant
-                        communication
-                        was required with other departments as well as the client. This involved ingredient
-                        procurement,
-                        kitchen testing, consumer testing, scaling up to production, and finishing with product
-                        launches.
-                    </div>
-                    <div class="card-paragraph">
-                        My background has cultivated my comprehensive approach to problem solving and provided me with
-                        an aptitude for understanding
-                        the needs and requirements of clients. I am currently pursuing additional education to enhance
-                        my
-                        value in the tech world.
+                        Research and Development Manager for a large snack foods company, I took products from ideation
+                        to launch. My management background cultivated my comprehensive approach to problem solving and
+                        provided me with an aptitude for understanding the needs of clients and customers.
                     </div>
                 </div>
                 <div class="about-right">
-                    <img src=./public/images/brenton.jpg class="self-photo" alt="Brenton Himself">
+                    <img src=./public/images/brenton-beach.jpg class="self-photo" alt="Brenton Himself">
                 </div>
             </div>
         </div>
@@ -511,7 +494,7 @@
                     </a>
                 </li>
                 <li class="icon-resume connect-link">
-                    <a class="github-repo" href="https://drive.google.com/open?id=1UatM3KT_zOQ1C5UAUjUfYFCJbKmYM7Ye"
+                    <a class="github-repo" href="https://drive.google.com/open?id=1J0xQ5PuhRnXGOKUR6FcAv0S36pFXO-2z"
                         target="_blank">
                         Resume
                     </a>
@@ -526,18 +509,12 @@
                         GitHub
                     </a>
                 </li>
-                <li class="icon-aboutme connect-link">
-                    <a class="github-repo" href="https://about.me/brentonjenkins" target="_blank">
-                        About.me
-                    </a>
-                </li>
             </ul>
 
             <div class="jelly-div tooltip">
                 <img src=./public/images/jellyfish-logo.png class="jelly-logo" alt="Jellyfish Logo">
                 <span class="footnote">
-                    Photos I took (top to bottom):
-                    <br>Laguna Beach, &nbsp; Guy W Talbot State Park, &nbsp; Solvang, &nbsp; Redondo Beach
+                    Photos I took: top is Laguna Beach, the rest are Redondo Beach
                 </span>
             </div>
 
