changes to prepare for new ux design website

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="about-writing-section writing-section">
                 <div class="about-left">
                     <div class="card-paragraph">
-                        I’m a freelance UX Designer pursuing a full-time position. I currently live in Redondo Beach,
+                        I’m a freelance UX Designer and Front End Developer pursuing a full-time position. I currently live in Redondo Beach,
                         located in the greater Los Angeles area. I earned my Bachelor of Science degree in Food Science
                         from Cal Poly, San Luis Obispo. Transitioning into tech, I first earned my Full Stack Web
                         Development certificate from UCLA Extension. With this foundation in coding, I have continued
