removed link to very first portfolio website

--- a/index.html
+++ b/index.html
@@ -522,9 +522,9 @@
                 <p class="copyright">
                     © 2018 Copyright Brenton Jenkins
                 </p>
-                <a class="github-repo old-portfolio" href="https://brenton-jenkins-portfolio.herokuapp.com/" target="_blank">
+                <!-- <a class="github-repo old-portfolio" href="https://brenton-jenkins-portfolio.herokuapp.com/" target="_blank">
                     Previous Portfolio Website
-                </a>
+                </a> -->
             </div>
         </div>
     </div>
