tweaked top redondo image and skills section paragraph

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
             <div class="about-writing-section writing-section">
                 <div class="about-left">
                     <div class="card-paragraph">
-                        I’m a freelance UX Designer and Front End Developer pursuing a full-time position. I currently live in Redondo Beach,
+                        I’m a freelance UX Designer and Front End Developer pursuing a full-time position. I currently
+                        live in Redondo Beach,
                         located in the greater Los Angeles area. I earned my Bachelor of Science degree in Food Science
                         from Cal Poly, San Luis Obispo. Transitioning into tech, I first earned my Full Stack Web
                         Development certificate from UCLA Extension. With this foundation in coding, I have continued
@@ -390,10 +391,9 @@
             </div>
             <div class="writing-section">
                 <div class="card-paragraph skills-paragraph">
-                    The UCLA Full Stack Web Development certificate program covered the following topics in varying
-                    detail. I am more proficient
-                    with some of these skills than others, but am continuing to learn and expand my knowledge of these
-                    technologies.
+                    The UCLA Full Stack Web Development certificate program covered the following topics. I am more
+                    proficient with some of these than others, and am now focusing on expanding my knowledge of UX
+                    Design skills.
                 </div>
             </div>
             <div class="skills-inner-box">
