tweaked top redondo image and skills section paragraph

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
             <div class="jelly-div tooltip">
                 <img src=./public/images/jellyfish-logo.png class="jelly-logo" alt="Jellyfish Logo">
                 <span class="footnote">
-                    Photos I took: top is Laguna Beach, the rest are Redondo Beach
+                    Photos I took: Laguna Beach (top/banner), Redondo Beach (everything else)
                 </span>
             </div>
 
