--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
             <div class="jelly-div tooltip">
                 <img src=./public/images/jellyfish-logo.png class="jelly-logo" alt="Jellyfish Logo">
                 <span class="footnote">
-                    Photos I took: Laguna Beach (top/banner), Redondo Beach (everything else)
+                    My photos: Laguna Beach (top), Redondo Beach (everything else)
                 </span>
             </div>
 
